example/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_25\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Administrator\example
-d
C:\Users\Administrator\example\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Administrator\example\Usuario.java
<---- end of javadoc command ---->
Loading source file C:\Users\Administrator\example\Usuario.java...
Constructing Javadoc information...
C:\Users\Administrator\example\Usuario.java:1: error: cannot find symbol
public class Usuario implements Serializable {	
                                ^
  symbol: class Serializable
Standard Doclet version 1.8.0_25
Building tree for all the packages and classes...
Generating C:\Users\Administrator\example\doc\Usuario.html...
Generating C:\Users\Administrator\example\doc\package-frame.html...
Generating C:\Users\Administrator\example\doc\package-summary.html...
Generating C:\Users\Administrator\example\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Administrator\example\doc\allclasses-frame.html...
Generating C:\Users\Administrator\example\doc\allclasses-noframe.html...
Generating C:\Users\Administrator\example\doc\index.html...
Generating C:\Users\Administrator\example\doc\stylesheet.css...
1 warning
